--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.379.0",
     "react": "^18.2.0",
